--- a/resume.tex
+++ b/resume.tex
@@ -76,7 +76,7 @@
 % -----------------------------------------------------------
 \begin{document}
 \begin{tabular*}{7in}{l@{\extracolsep{\fill}}r}
-  \textbf{\Large Sanad Kadu} & \textit{sanaddilipkadu@gmail.com | +91-9604484805 | India | https://github.com/cypherBeep}
+  \textbf{\Large Sanad Kadu  }  \textit{sanaddilipkadu@gmail.com | +91-9604484805 | \url{https://github.com/cypherBeep}}
 \end{tabular*}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%% 
 \resheading{Education}
